# grade

./: COPYING  README.rst  grade.cabal  grade.pl  make-skeleton.pl
examples/: data  data.grade  defines.conf  defines.skeleton
lib/Grade/: Grade.hs  GradeIO.hs  Parse.hs  ParseUtils.hs  Print.hs  Skeleton.hs  Types.hs
lib/Grade/Score/: Bounding.hs  Commenting.hs  EqualWeighted.hs  EqualWeightedCounting.hs  SectionOnly.hs  Setting.hs  Simple.hs  Zeroing.hs
prog/: Grade.hs
prog/Grade/: Methods.hs
