name:                grade
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD2
license-file:        COPYING
author:              Nathaniel Wesley Filardo
maintainer:          nwf@ietfng.org
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  exposed-modules:     Grade.Types,
                       Grade.ParseUtils,
                       Grade.Parse,
                       Grade.Grade,
                       Grade.GradeIO,
                       Grade.Score.Zeroing,
                       Grade.Score.Setting,
                       Grade.Score.Bounding,
                       Grade.Score.Commenting,
                       Grade.Score.SectionOnly,
                       Grade.Score.Simple,
                       Grade.Score.EqualWeighted,
                       Grade.Score.EqualWeightedCounting,
                       Grade.Skeleton,
                       Grade.Print
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <5,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <1,
                       lens >=4 && <5,
                       mtl >=2.2 && <3,
                       parsers >=0.12 && <1,
                       text >=1.2 && <2,
                       trifecta >=1.5 && <2,
                       ansi-wl-pprint >= 0.6 && <1,
                       wl-pprint-extras >=3.5 && <3.6

executable grade
  Main-Is:             Grade.hs
  hs-source-dirs:      prog
  default-language:    Haskell2010
  other-extensions:    CPP
  build-depends:       base >=4.6 && <5,
                       cmdlib >= 0.3 && <1,
                       directory >= 1.2 && <2,
                       filepath >= 1.4 && <2,
                       trifecta >=1.5 && <2,
                       ansi-wl-pprint >= 0.6 && <1,
                       wl-pprint-extras >=3.5 && <3.6,
                       grade >=0.1

executable phf-xml
  Main-Is:             phf-xml.hs
  hs-source-dirs:      prog
  default-language:    Haskell2010
  other-extensions:    CPP
  build-depends:       base >=4.6 && <5,
                       bytestring >=0.10 && <0.11,
                       cmdlib >= 0.3 && <1,
                       conduit >= 1.2 && <2,
                       conduit-extra >= 1.1 && <2,
                       containers >=0.5 && <1,
                       directory >= 1.2 && <2,
                       filepath >= 1.4 && <2,
                       lens >=4 && <5,
                       mtl >=2.2 && <3,
                       reducers >= 3.12 && <4,
                       resourcet >= 1 && <2,
                       text >=1.2 && <2,
                       transformers >=0.4 && <1,
                       trifecta >=1.5 && <2,
                       ansi-wl-pprint >= 0.6 && <1,
                       wl-pprint-extras >=3.5 && <3.6,
                       xml-conduit >=1.3 && <2,
                       xml-lens >=0.1 && <1,
                       grade >=0.1
